add html,css code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
                <meta charset="UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <title>TODO-LIST</title>
+               <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-               
+       <div id="main">
+               <div id="signup">
+                              <h1>Sign Up</h1>
+                              <form id="signup-form">
+                                     <input class="inp" type="text" id="username" placeholder="Username"><br><br>
+                                     <input class="inp" type="password" id="password" placeholder="Password">
+                                     <button type="submit">Sign Up</button>
+                              </form>
+                              <p>Already have an account? <a href="#" id="sign-in-link">Sign In</a></p>
+               </div>
+               <!-- <div id="sign-in">
+                              <h1>Sign In</h1>
+                              <form id="login-form">
+                                     <input type="text" id="username" placeholder="Username">
+                                     <input type="password" id="password" placeholder="Password">
+                                     <button type="submit">Login</button>
+                              </form>
+                              <p>Don't have an account? <a href="#" id="sign-up-link">Sign Up</a></p>
+               </div> -->
+              </div>
 </body>
 </html>
